--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini Project: Profile Page</title>
+  <title>Mini Project: Profile Pages</title>
 </head>
 <body>
   <header>
